Changes for 2.3.0

New features:
...G...PS. [ZBXNEXT-453] added a new User parameter to daemon configurations that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
...G...PS. [ZBX-7618] removed partial matching for long format command line options (Juris)
..F....... [ZBX-6940] fixed frontend history links not remembering search queries (Pavels)
...GI..PS. [ZBX-5526] removed checking for PosgreSQL server version and disabled nonstandard use of escape strings in order to support versions newer than 8.1 (igors)
...G...... [ZBX-7414] added description to HostnameItem that UserParameters and aliases are not supported (igors)
...G...... [ZBX-7413] fixed concistentcy of config file handling for loading and checking userparameters and aliases before starting the daemon (igors)
...G...... [ZBX-7412] fixed alias parsing; colon symbols are now supported in alias parameters (Juris)
........S. [ZBX-7204] fixed the timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.2rc1

New features:
........S. [ZBXNEXT-2069] added HOST.PORT macro support for internal and trigger based notifications (wiper)
A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-7576] when pinging a broadcast address ignore responses from other addresses (wiper)
..F....... [ZBX-7632] allow to add favourite graph from disable host (Eduard)
..F....... [ZBX-7634] removed sid from trigger URL in Monitoring->Triggers (Oleg)